; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_syn-att.c_opr_cast.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_syn-att.c_opr_cast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ud = type { i32 }
%struct.ud_operand = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"*\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ud*, %struct.ud_operand*)* @opr_cast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @opr_cast(%struct.ud* %0, %struct.ud_operand* %1) #0 {
  %3 = alloca %struct.ud*, align 8
  %4 = alloca %struct.ud_operand*, align 8
  store %struct.ud* %0, %struct.ud** %3, align 8
  store %struct.ud_operand* %1, %struct.ud_operand** %4, align 8
  %5 = load %struct.ud_operand*, %struct.ud_operand** %4, align 8
  %6 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %11 [
    i32 16, label %8
    i32 32, label %8
  ]

8:                                                ; preds = %2, %2
  %9 = load %struct.ud*, %struct.ud** %3, align 8
  %10 = call i32 @ud_asmprintf(%struct.ud* %9, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %12

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %11, %8
  ret void
}

declare dso_local i32 @ud_asmprintf(%struct.ud*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
